# cloudrecovery

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: health-check.yml  release.yml
cloudrecovery/: __main__.py  cli.py  events.py  incident_detector.py  pty_runner.py  redact.py  server.py  settings.py  step_detector.py
cloudrecovery/agent/: __init__.py  agent.yaml.example  config.py  connection.py  main.py
cloudrecovery/agent/collectors/: host.py  openshift.py
cloudrecovery/agent/systemd/: cloudrecovery-agent.service
cloudrecovery/autopilot/: __init__.py  recovery_engine.py  safety_monitor.py  session_manager.py
cloudrecovery/ibm/: __init__.py  automation.py  prompt_map.py
cloudrecovery/llm/: llm_provider.py  model_catalog.py  prompts.py  settings.py
cloudrecovery/mcp/: action_policy.py  host.py  mcp_server.py  openshift.py  policy.py  synthetics_tools.py  tools.py
cloudrecovery/notifications/: __init__.py  email_notifier.py  models.py
cloudrecovery/policy/packs/: prod.yaml  staging.yaml
cloudrecovery/runbooks/: __init__.py  executor.py  registry.py  schema.py
cloudrecovery/runbooks/packs/: crashloopbackoff_openshift.yaml  site_down_basic.yaml
cloudrecovery/signals/: __init__.py  aggregator.py  models.py  synthetics.py
cloudrecovery/web/: Footer.jsx  admin_dashboard.html  admin_dashboard.js  app.js  index.html  styles.css
config/: autopilot_config.yaml
docs/: AUTOPILOT_SETUP.md  BEST_PRACTICES.md  README.md
docs/examples/: basic_usage.py  production_example.yaml
scripts/: monitor_anything.sh
tests/: test_imports.py
